[gd_scene load_steps=22 format=2]

[ext_resource path="res://assets/fonts/Kenney Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/buttons/titlescreen/02p.png" type="Texture" id=2]
[ext_resource path="res://assets/buttons/titlescreen/03b.png" type="Texture" id=3]
[ext_resource path="res://assets/buttons/titlescreen/01p.png" type="Texture" id=4]
[ext_resource path="res://assets/boxs/titlescreen.png" type="Texture" id=5]
[ext_resource path="res://assets/buttons/titlescreen/02b.png" type="Texture" id=6]
[ext_resource path="res://assets/buttons/titlescreen/01b.png" type="Texture" id=7]
[ext_resource path="res://titlescreen/TitleScreen.gd" type="Script" id=8]
[ext_resource path="res://assets/img/Hills2.png" type="Texture" id=9]
[ext_resource path="res://assets/img/Hills6.png" type="Texture" id=10]
[ext_resource path="res://titlescreen/ParallaxBackground.gd" type="Script" id=11]
[ext_resource path="res://assets/img/Hills1.png" type="Texture" id=12]
[ext_resource path="res://assets/img/Hills5.png" type="Texture" id=13]
[ext_resource path="res://assets/img/Hills4.png" type="Texture" id=14]
[ext_resource path="res://assets/img/Hills3.png" type="Texture" id=15]
[ext_resource path="res://assets/buttons/titlescreen/04p.png" type="Texture" id=16]
[ext_resource path="res://assets/buttons/titlescreen/04b.png" type="Texture" id=17]
[ext_resource path="res://assets/buttons/titlescreen/03p.png" type="Texture" id=18]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "fadeout"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 0 ) ]
}

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1280, 720 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parallax" type="ParallaxBackground" parent="."]
script = ExtResource( 11 )

[node name="Layer1" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.1, 1 )
motion_mirroring = Vector2( 1042, 0 )

[node name="Texture" type="TextureRect" parent="Parallax/Layer1"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer2" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.2, 1 )
motion_mirroring = Vector2( 1042, 0 )

[node name="Texture" type="TextureRect" parent="Parallax/Layer2"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer3" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.4, 1 )
motion_mirroring = Vector2( 1042, 0 )

[node name="Texture" type="TextureRect" parent="Parallax/Layer3"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer4" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.6, 1 )
motion_mirroring = Vector2( 1042, 0 )

[node name="Texture" type="TextureRect" parent="Parallax/Layer4"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer5" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.8, 1 )
motion_mirroring = Vector2( 1042, 0 )

[node name="Texture" type="TextureRect" parent="Parallax/Layer5"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Layer6" type="ParallaxLayer" parent="Parallax"]
motion_scale = Vector2( 0.9, 1 )
motion_mirroring = Vector2( 1042, 0 )

[node name="Texture" type="TextureRect" parent="Parallax/Layer6"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_right = 160.0
margin_bottom = 40.0
rect_min_size = Vector2( 1040, 1240 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Margin1" type="MarginContainer" parent="VBox"]
margin_right = 1040.0
margin_bottom = 247.0
rect_min_size = Vector2( 1040, 247 )

[node name="Title" type="Label" parent="VBox/Margin1"]
margin_left = 101.0
margin_top = 85.0
margin_right = 939.0
margin_bottom = 161.0
size_flags_horizontal = 4
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.85098, 0.282353, 1 )
custom_colors/font_color_shadow = Color( 0.607843, 0.482353, 0.00784314, 1 )
custom_constants/shadow_offset_x = 4
custom_constants/shadow_offset_y = 4
text = "HABILIDADES BASICAS"
align = 1

[node name="Margin2" type="MarginContainer" parent="VBox"]
margin_top = 251.0
margin_right = 1040.0
margin_bottom = 1307.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="VBox/Margin2"]
margin_left = 235.0
margin_right = 805.0
margin_bottom = 1056.0
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBox/Margin2"]
margin_left = 295.0
margin_right = 745.0
margin_bottom = 1056.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="Margin0" type="MarginContainer" parent="VBox/Margin2/VBoxContainer"]
margin_right = 450.0
margin_bottom = 35.0
rect_min_size = Vector2( 0, 35 )

[node name="Margin1" type="MarginContainer" parent="VBox/Margin2/VBoxContainer"]
margin_top = 39.0
margin_right = 450.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 82 )

[node name="Nivel1" type="TextureButton" parent="VBox/Margin2/VBoxContainer/Margin1"]
margin_top = 12.0
margin_right = 450.0
margin_bottom = 69.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 4 )
expand = true
stretch_mode = 3

[node name="Margin2" type="MarginContainer" parent="VBox/Margin2/VBoxContainer"]
margin_top = 125.0
margin_right = 450.0
margin_bottom = 207.0
rect_min_size = Vector2( 450, 82 )

[node name="Nivel2" type="TextureButton" parent="VBox/Margin2/VBoxContainer/Margin2"]
margin_top = 12.0
margin_right = 450.0
margin_bottom = 69.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
expand = true
stretch_mode = 3

[node name="Margin3" type="MarginContainer" parent="VBox/Margin2/VBoxContainer"]
margin_top = 211.0
margin_right = 450.0
margin_bottom = 293.0
rect_min_size = Vector2( 450, 82 )

[node name="Nivel3" type="TextureButton" parent="VBox/Margin2/VBoxContainer/Margin3"]
margin_top = 12.0
margin_right = 450.0
margin_bottom = 69.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 18 )
expand = true
stretch_mode = 3

[node name="Margin4" type="MarginContainer" parent="VBox/Margin2/VBoxContainer"]
margin_top = 297.0
margin_right = 450.0
margin_bottom = 379.0
rect_min_size = Vector2( 450, 82 )

[node name="Nivel4" type="TextureButton" parent="VBox/Margin2/VBoxContainer/Margin4"]
margin_top = 12.0
margin_right = 450.0
margin_bottom = 69.0
rect_min_size = Vector2( 450, 57 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 17 )
texture_pressed = ExtResource( 16 )
expand = true
stretch_mode = 3

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="ColorRect"]
anims/fadein = SubResource( 2 )
anims/fadeout = SubResource( 3 )
[connection signal="pressed" from="VBox/Margin2/VBoxContainer/Margin1/Nivel1" to="." method="_on_Nivel1_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBoxContainer/Margin2/Nivel2" to="." method="_on_Nivel2_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBoxContainer/Margin3/Nivel3" to="." method="_on_Nivel3_pressed"]
[connection signal="pressed" from="VBox/Margin2/VBoxContainer/Margin4/Nivel4" to="." method="_on_Nivel4_pressed"]
